--- a/styles/globals.css
+++ b/styles/globals.css
@@ -155,7 +155,7 @@ input[type=text]{
   padding: 20px;
   position: fixed;
   bottom: 0px;
-  z-index: 1;
+  z-index: -1;
 }
 
 .event-title{
